--- a/css/style.css
+++ b/css/style.css
@@ -33,29 +33,20 @@ a {
 /* NAVIGATION BAR */
 
 .hero {
-  background-image: url(../images/yosemite.jpg);
+  background-image: url(../images/yosemite.png);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
-  position: relative;
   background-position: center;
   box-shadow: 0px 2px 5px #888888;
 }
 
-.hero_overlay{
-  background-color: #1A505A;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  opacity: 0.2;
-}
-
 .hero_container {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
+  margin: 0 auto;
+  padding-top: 10%;
   width: 70%;
+  clear: both;
+
 }
 
 .hero_container h1 {
@@ -84,10 +75,9 @@ a {
 }
 
 .top_button_container {
-  position: absolute;
-  right: 5%;
-  top: 5%;
-
+  float: right;
+  padding-top: 3%;
+  padding-right: 2%;
 }
 
 .button {
@@ -136,16 +126,20 @@ a {
     margin-bottom: 40px;
   }
   .top_button_container {
+    float: none;
+    text-align: center;
+    padding-right: 0;
   }
 }
 
 @media (min-width: 640px) and (max-width: 1200px) {
-
+  .top_button_container {
+    float: none;
+    text-align: center;
+    padding-right: 0;
+  }
 }
 
-@media (min-width: 1440px) {
-
-}
 
 /* ABOUT */
 
@@ -191,14 +185,17 @@ a {
 }
 
 @media screen and (max-width: 640px) {
+  .about {
+    padding-top: 0px;
+  }
   .about_container p {
-    font-size: 20px;
+    font-size: 18px;
     width: 100%;
     text-align: center;
   }
   .about_left h2 {
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
   }
 }
 
@@ -618,7 +615,7 @@ a {
     width: 80%;
   }
   .contact_container p {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
