--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,6 @@ a {
   .hero_container {
     width: 90%;
   }
-
   .hero_container h1 {
     font-size: 32px;
   }
@@ -134,6 +133,9 @@ a {
     float: none;
     text-align: center;
     padding-right: 0;
+  }
+  .button {
+    font-size: 12px;
   }
 }
 
@@ -202,6 +204,7 @@ a {
     text-align: center;
     font-size: 20px;
   }
+  
 }
 
 
@@ -391,11 +394,11 @@ a {
 .button_projects {
   width: 140px;
   height: 45px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
+  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
-  font-weight: 500;
+  font-weight: bold;
   color: #232323;
   background-color: #fff;
   background: none;
@@ -597,12 +600,13 @@ a {
 
 .contact_container .button {
   color: #232323;
+  font-size: 12px;
 }
 
 .button_touch {
   border-radius: 8px;
   color: #232323;
-  font-size: 20px;
+  font-size: 12px;
   width: 150px;
   height: 53px;
   border: solid #1A505A 2px;
