--- a/css/simplebox.css
+++ b/css/simplebox.css
@@ -48,6 +48,22 @@ h4 {
   margin: 20px 0;
 }
 
+@media screen and (max-width: 640px)  {
+  p {
+    font-size: 14px;
+  }
+  a {
+    font-size: 14px;
+  }
+  h1 {
+    font-size: 22px;
+  }
+  ul li {
+    font-size: 14px;
+    margin: 10px;
+  }
+}
+
 /** HERO **/
 
 .hero {
@@ -286,8 +302,14 @@ h4 {
   .problem_container {
     width: 100%;
   }
+  .problem_container p {
+    width: 90%;
+  }
   .solution_container {
     width: 100%;
+  }
+  .solution_container p {
+    width: 90%;
   }
 }
 
@@ -364,8 +386,11 @@ h4 {
     margin-left: 0px;
     margin-top: 20px;
   }
-  .research_container img {
-    width: 100%;
+  .research_container {
+    width: 90%;
+  }
+  .user_flow_container {
+    width: 90%;
   }
 }
 
@@ -404,6 +429,11 @@ h4 {
   background-repeat: no-repeat;
   box-shadow: 0px 2px 5px #888888;
   width: 100%;
+}
+@media screen and (max-width: 640px) {
+  .branding {
+    width: 90%;
+  }
 }
 
 /** BRANDING **/
@@ -447,6 +477,11 @@ h4 {
   margin: 30px;
 }
 
+@media screen and (max-width: 640px) {
+  .low_fidelity {
+    width: 90%;
+  }
+}
 
 /** LOW-FIDELITY **/
 
@@ -476,6 +511,12 @@ h4 {
   text-align: left;
   text-decoration: none;
   color: #7D9DBD;
+}
+
+@media screen and (max-width: 640px) {
+  .high_fidelity {
+    width: 90%;
+  }
 }
 
 /** HIGH-FIDELITY **/
@@ -556,6 +597,9 @@ h4 {
   }
   .html img {
     width: 100%;
+  }
+  .final_product {
+    width: 90%;
   }
 }
 
