--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ a {
 .button {
   width: 140px;
   height: 45px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Catamaran', Helvetica, sans-serif;
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
@@ -204,7 +204,7 @@ a {
     text-align: center;
     font-size: 20px;
   }
-  
+
 }
 
 
@@ -601,22 +601,7 @@ a {
 .contact_container .button {
   color: #232323;
   font-size: 12px;
-}
-
-.button_touch {
-  border-radius: 8px;
-  color: #232323;
-  font-size: 12px;
-  width: 150px;
-  height: 53px;
-  border: solid #1A505A 2px;
-  text-decoration: none;
-  background: none;
-  margin-top: 30px;
-  font-family: sans-serif;
-  letter-spacing: 1;
-  margin-bottom: 50px;
-  cursor: pointer;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 640px) {
