--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -128,6 +128,37 @@ a {
   font-weight: 400;
 }
 
+.button_container {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.button_projects {
+  width: 140px;
+  height: 45px;
+  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: white;
+  background-color: #fff;
+  background: none;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.button_projects:hover {
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
 .arrow_back_container {
   position: absolute;
   top: 5% ;
