--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -76,7 +76,7 @@ a {
 /** HERO **/
 
 .hero {
-  background-image: url("../images/ridestarter/ridestarter_cover.png");
+  background-image: url("../images/ridestarter_laptop.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
