--- a/css/simplebox.css
+++ b/css/simplebox.css
@@ -67,7 +67,7 @@ h4 {
 /** HERO **/
 
 .hero {
-  background-image: url("../images/simplebox/simplebox_cover.png");
+  background-image: url("../images/simplebox_cover.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
