--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ a {
 .ridestarter_container img {
   max-width: 45%;
   float: left;
-  background-image: url(../images/ridestarter_laptop.png);
+  background-image: url(../images/ridestarter_laptop.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: 10px 10px 5px #888888;
