revised for runkeeper

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a {
 
 .hero_container p {
   letter-spacing: 3;
-  font-size: 24px;
+  font-size: 22px;
   text-align: center;
   color: #DDDDDD;
   font-family: sans-serif;
@@ -447,7 +447,7 @@ a {
   letter-spacing: 4;
   font-size: 34px;
   font-family: helvetica, sans-serif;
-  color: #CA6435;
+  color: #003343;
   font-weight: 600;
 }
 
