--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,32 @@ a {
   transform: translateY(-7px);
 }
 
+.button_contact {
+  width: 140px;
+  height: 45px;
+  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: white;
+  background-color: #fff;
+  background: none;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.button_contact:hover {
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
 .arrow_down_container{
   text-align: center;
   margin-top: 40px;
@@ -471,6 +497,37 @@ a {
   margin: 0 auto;
   line-height: 30px;
   padding-top: 15px;
+}
+
+.button_gym {
+  width: 140px;
+  height: 45px;
+  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: bold;
+  color: #232323;
+  background-color: #fff;
+  background: none;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.gym_button {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.button_gym:hover {
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
 }
 
 @media screen and (max-width: 640px) {
