--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,7 @@ a {
 .more_projects {
   clear: both;
   padding-top: 80px;
+  display: none;
 }
 
 .more_projects img {
@@ -648,7 +649,7 @@ a {
 .contact {
   padding-top: 40px;
   clear: both;
-  
+
 }
 
 .contact h1 {
