--- a/css/simplebox.css
+++ b/css/simplebox.css
@@ -571,9 +571,10 @@ h4 {
 }
 
 .html h1 {
-  font-size: 26px;
-  font-family: cabin, sans-serif;
+  font-size: 20px;
+  font-family: 'Catamaran', Helvetica, sans-serif;
   text-align: left;
+  text-transform: uppercase;
 }
 
 .html a {
@@ -599,8 +600,7 @@ h4 {
 }
 
 .conclusion img {
-  margin-left: 15%;
-  width: 70%;
+  width: 100%;
 }
 
 .html a {
