--- a/css/gym.css
+++ b/css/gym.css
@@ -14,7 +14,6 @@ p {
   font-family: 'Catamaran', Helvetica, sans-serif;
   font-size: 18px;
   text-align: left;
-  line-height: 1.8em;
 }
 
 h1 {
@@ -563,6 +562,9 @@ a {
 @media screen and (max-width: 640px) {
   .usability_container {
     width: 90%;
+  }
+  .prototype {
+    display: none;
   }
 }
 
